<resources>
    <string name="title">TechDrop</string>
    <string name="subtitle">Your E-Waste Recycling Facility Locator</string>
    <string name="news_1">Let’s digest on how sustainable lifestyle improve your daily routine</string>
    <string name="news_2">Tips and Trick on how to make your mobile devices last longer</string>
    <string name="sustainable_battery_call">This is a call for you to only choose product with sustainable battery production</string>
    <string name="click_for_more">click for more</string>
    <string name="btn_profile">Profile</string>
    <string name="btn_locate">Locate</string>
    <string name="btn_event">Event</string>
    <string name="map_menu">View On Map</string>
    <string name="map_option">Enter your location</string>
    <string name="locate_tittle">Locate Centre</string>
    <string name="location_icon">Location Icon</string>
    <string name="closed_facility">closed facility</string>
    <string name="close_fac_name">Ewise Centre</string>
    <string name="closed_fac_time">9:00 - 4:00</string>
    <string name="closed_status">Closed</string>
    <string name="close_fac_dis">1.5 KM</string>
    <string name="open_facility_img">open facility img</string>
    <string name="fac1_name">Green Drop Point</string>
    <string name="fac1_time">10:00 - 5:00</string>
    <string name="open_status">Open</string>
    <string name="fac1_dis">5.4 KM</string>
    <string name="facility_description">Facility Description...</string>
    <string name="faq_btn">FAQ</string>
    <string name="email_fac">Email: recycle@greendrop.com</string>
    <string name="operating_hour_fac">Operating Hour: 10:00 - 6:00 weekend</string>
    <string name="accepted_ewaste">Accepted Ewaste:</string>
    <string name="contact_fac1">Contact: 012-3456789</string>
    <string name="f1_items">Phones, TVs, Laptops</string>
    <string name="back_btn">BACK</string>
    <string name="navigate_btn">Navigate</string>
    <string name="list_menu">view in list</string>
    <string name="msg_tips">pinch your finger to zoom</string>
    <string name="profile_icon">profile_icon</string>
    <string name="password_icon">password_icon</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="user_login_btn">User Login</string>
    <string name="facility_login_btn">Facility Login</string>
    <string name="guest_login_btn">Guest Login</string>
    <string name="forgot_password_notes">Forgot Password</string>
    <string name="user_guide_notes"><![CDATA[USER MANUAL & GUIDANCE]]></string>
    <string name="home_btn">Home</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="register_btn">Register</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="return_login_fac">Return to log in page</string>
    <string name="facility_name_detail">Facility name</string>
    <string name="facility_address_detail">Facility Address</string>
    <string name="facility_phone_num_details">Facility Phone Number</string>
    <string name="register_fac_notes">Please Complete All The Detail After Sign-in</string>
    <string name="save_btn">SAVE</string>
    <string name="facility_name_homepage">Facility Name</string>
    <string name="contact_number_homepage">Contact Number</string>
    <string name="email_homepage">Email</string>
    <string name="types_waste_homepage">Types of E-Waste Accepted</string>
    <string name="settings_btn">settings</string>
    <string name="facility_description_homepage">Facility Description</string>
    <string name="location_address_homepage">Location Address</string>
    <string name="title_activity_maps_activitytry">MapsActivitytry</string>
    <string name="title_activity_maps_activityyyy">MapsActivityyyy</string>
    <string name="edit_details_btn">edit details</string>
    <string name="open_close_status">Open/Close</string>
    <string name="facility_operation_status">Facility Operation</string>
    <string name="user_profile_manager">User Profile Manager</string>
    <string name="username_profile_edit">Username</string>
    <string name="user_fullname_profile_edit">User full name</string>
    <string name="user_address_profile_edit">User address</string>
    <string name="tittle_profile">User Profile Manager</string>
    <string name="operating_hour_detail">Operating Hour</string>
    <string name="log_out_btn">Log out</string>
    <string name="facility_login">facility login</string>
    <string name="reset_password_note">Reset Password</string>
    <string name="reset_password_btn">Reset Password</string>
    <string name="delete_notes">delete</string>
</resources>
